--- a/meida/Src/Application/Info.plist
+++ b/meida/Src/Application/Info.plist
@@ -41,5 +41,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>请点击&quot;好&quot;以允许访问</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>请点击&quot;好&quot;以允许访问</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>请点击&quot;好&quot;以允许访问</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请点击&quot;好&quot;以允许访问</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请点击&quot;好&quot;以允许访问</string>
 </dict>
 </plist>
